# mlipx

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml
benchmark_data/atomisation_energy/: atomisation_ref.json
benchmark_data/lattice_constants/: lattice_constants_ref.json  lattice_constants_ref_types.json
benchmark_data/lattice_energy/: DMC_lattice_energy  list
benchmark_data/water_MD_data/: exp-300k-g-r_oo.json  pbe-d3-330k-g-r_hh.json  pbe-d3-330k-g-r_oh.json  pbe-d3-330k-g-r_oo.json  vcaf_300K_NPT_SPE_water_clean.json  vdos_300K_PBE_D3.json
benchmark_datasets/dmc-ice13-main/: ice_polymorph_ref_PBE_D3.json
benchmark_datasets/lattice_energy/: run-lattice-energy-single-model.py
docs/source/: authors.rst  build_graph.rst  concept.rst  conf.py  glossary.rst  index.rst  installation.rst  nodes.rst  quickstart.rst  recipes.rst  references.bib
examples/: README.md  data.dvc  models.dvc
examples/.dvc/: config
examples/adsorption/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
examples/benchmark-elements/: dvc.yaml  main.py  params.yaml  zntrack.json
examples/benchmark-file/: dvc.yaml  main.py  params.yaml  zntrack.json
examples/diatomics/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
examples/energy-volume/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
examples/ev/: .gitignore  dvc.yaml  main.py  models.py  mptraj.xyz.dvc  params.yaml  zntrack.json
examples/invariances/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
examples/md/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
examples/metrics/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
examples/neb/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
examples/phase_diagram/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
examples/pourbaix_diagram/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
examples/relax/: README.md  dvc.yaml  main.py  params.yaml  zntrack.json
examples/vibrational_analysis/: README.md  dvc.yaml  main.py  models.py  params.yaml  zntrack.json
mlipx/: __init__.py  __init__.pyi  abc.py  benchmark_download_utils.py  category_benchmark.py  dash_utils.py  data_utils.py  doc_utils.py  mlip_arena_utils.py  phonons_utils.py  plotting_utils.py
mlipx/cli/: main.py
mlipx/nodes/: DMC_ICE_13_benchmark.py  GMTKN55_benchmark_node.py  LNCI16.py  MOF_benchmark.py  QMOF.py  S24_benchmark.py  S30L.py  X23_benchmark.py  __init__.py  adsorption.py  atomisation_energy.py  (+44 more)
(+384 files in other folders)
