[tool.poetry]
name = "mlipx"
version = "0.1.0"
description = "machine-learned interatomic potential tools"
authors = ["Fabian Zills <fabian.zills@web.de>", "Sandip De <sandip.de@basf.com>", "Sheena Agarwal <sheena.a.agarwal@basf.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
zntrack = "0.8.0a4"
ase = "^3"
typer = "^0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "^8"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
mlipx = "mlipx.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
ignore-words-list = "basf"
