[project]
name = "mlipx"
version = "0.1.4"
description = "Machine-Learned Interatomic Potential eXploration"
authors = [
    { name = "Sandip De", email = "sandip.de@basf.com" },
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
    { name = "Sheena Agarwal", email = "sheena.a.agarwal@basf.com" }
]

readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords=["data-version-control", "machine-learning", "reproducibility", "collaboration", "machine-learned interatomic potential", "mlip", "mlff"]

dependencies = [
    "ase>=3.24.0",
    "lazy-loader>=0.4",
    "mp-api>=0.45.2",
    "plotly>=6.0.0",
    "rdkit2ase>=0.1.4",
    "typer>=0.15.1",
    "zndraw>=0.5.10",
    "znh5md>=0.4.4",
    "zntrack>=0.8.3",
]

[dependency-groups]
docs = [
    "dvc-s3>=3.2.0",
    "furo>=2024.8.6",
    "jupyter-sphinx>=0.5.3",
    "nbsphinx>=0.9.6", # https://github.com/sphinx-doc/sphinx/issues/13352
    "sphinx>=8.1.3,!=8.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-hoverxref>=1.4.2",
    "sphinxcontrib-bibtex>=2.6.3",
    "sphinxcontrib-mermaid>=1.0.0",
]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]


[project.scripts]
mlipx = "mlipx.cli.main:app"


[tool.uv]
conflicts = [
    [
      { extra = "models" },
      { extra = "mattersim" },
    ],
]

[project.optional-dependencies]
models = [
    "chgnet>=0.4.0",
    "mace-torch>=0.3.10",
    "sevenn>=0.10.4",
]
orb = [
    "orb-models>=0.4.2",
    "pynanoflann",
    "cmake>=3.31.4",
]
mattersim = [
    "mattersim>=1.1.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.codespell]
ignore-words-list = "basf"
skip = "*.svg,*.lock,*.json"

[tool.ruff.lint]
select = ["I", "F", "E", "C", "W"]

[tool.uv.sources]
pynanoflann = { git = "https://github.com/dwastberg/pynanoflann" }
